Realm Location levels are now more representative of their distance from the Hub